--- a/css/styles.css
+++ b/css/styles.css
@@ -4,32 +4,8 @@ html {
 	font-family: 'Roboto', sans-serif;
 }
 
-@media (min-width: 576px) {
-	html {
-		font-size: 12px;
-	}
-}
-
-@media (min-width: 768px) {
-	html {
-		font-size: 14px;
-	}
-}
-
-@media (min-width: 992px) {
-	html {
-		font-size: 16px;
-	}
-}
-
-@media (min-width: 1200px) {
-	html {
-		font-size: 18px;
-	}
-}
-
 .icons-social i {
-	font-size: 3em;
+	font-size: 2vw;
 }
 
 main {
@@ -45,12 +21,12 @@ main {
 
 main > .intro {
 	font-family: 'Roboto Mono', monospace;
-	font-size: 3.75em;
+	font-size: 15vw;
 	font-weight: 600;
 }
 
 main > .tagline {
-	font-size: 1.5rem;
-	margin: 1.5rem 0;
+	font-size: 10rem;
+	margin: 10vw 0;
 	font-weight: 100;
 }
