--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@ html {
 }
 
 .icons-social i {
-	font-size: 4.5vw;
+	font-size: 4.0vw;
 }
 
 main {
@@ -21,37 +21,82 @@ main {
 
 main > .intro {
 	font-family: 'Roboto Mono', monospace;
-	font-size: 4vw;
+	font-size: 3.5vw;
 	font-weight: 600;
 }
 
 main > .tagline {
-	font-size: 2.7vw;
+	font-size: 2.3vw;
 	margin: 3vw 0;
 	font-weight: 100;
 }
 
-.bg-info {
-  background-color: grey;
 
+body{
+    background:#000;
+    font-family: 'Roboto Mono', monospace;
+    font-size: 34px;
+    font-style: italic;
+    letter-spacing:-1px;
+    width:12000px;
+    position:absolute;
+    top:0px;
+    left:0px;
+    bottom:0px;
+}
+.section{
+    margin:0px;
+    bottom:0px;
+    width:4000px;
+    float:left;
+    height:100%;
+    text-shadow:1px 1px 2px #f0f0f0;
+}
+.section h2{
+    margin:50px 0px 30px 50px;
+}
+.section p{
+    margin:20px 0px 0px 50px;
+    width:600px;
+}
+.black{
+    color:#fff;
+    background:black no-repeat top right;
+}
+.white{
+    color:#000;
+    background:white no-repeat top right;
 }
 
-// vertical carousel
-
-.vert .carousel-item-next.carousel-item-left,
-.vert .carousel-item-prev.carousel-item-right {
-    -webkit-transform: translate3d(0, 0, 0);
-            transform: translate3d(0, 0, 0);
+.section ul{
+    list-style:none;
+    margin:20px 0px 0px 550px;
 }
-
-.vert .carousel-item-next,
-.vert .active.carousel-item-right {
-    -webkit-transform: translate3d(0, 100%, 0);
-            transform: translate3d(0, 100% 0);
+.black ul li{
+    float:left;
+    padding:5px;
+    margin:5px;
+    color:#aaa;
 }
-
-.vert .carousel-item-prev,
-.vert .active.carousel-item-left {
--webkit-transform: translate3d(0,-100%, 0);
-        transform: translate3d(0,-100%, 0);
+.black ul li a{
+    display:block;
+    color:#f0f0f0;
+}
+.black ul li a:hover{
+    text-decoration:none;
+    color:#fff;
+}
+.white ul li{
+    float:left;
+    padding:5px;
+    margin:5px;
+    color:#aaa;
+}
+.white ul li a{
+    display:block;
+    color:#222;
+}
+.white ul li a:hover{
+    text-decoration:none;
+    color:#000;
 }
