--- a/css/styles.css
+++ b/css/styles.css
@@ -35,21 +35,29 @@ main > .tagline {
 body{
     background:#000;
     font-family: 'Roboto Mono', monospace;
-    font-size: 34px;
+    font-size: 2vw;
     font-style: italic;
-    letter-spacing:-1px;
-    width:12000px;
-    position:absolute;
-    top:0px;
-    left:0px;
-    bottom:0px;
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	justify-content: center;
+	padding: 0 30px;
+	text-align: center;
+  	background: black;
+	color: white;
 }
 .section{
+	
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	justify-content: center;
+	padding: 0 30px;
+	text-align: center;
+	
     margin:0px;
     bottom:0px;
-    width:4000px;
     float:left;
-    height:100%;
     text-shadow:1px 1px 2px #f0f0f0;
 }
 .section h2{
