--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ body{
     font-size: 2vw;
     font-style: italic;
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	min-height: 100vh;
 	justify-content: center;
 	padding: 0 30px;
@@ -49,7 +49,7 @@ body{
 .section{
 	
 	display: flex;
-	flex-direction: column;
+	flex-direction: row;
 	min-height: 100vh;
 	justify-content: center;
 	padding: 0 30px;
