--- a/css/styles.css
+++ b/css/styles.css
@@ -75,6 +75,13 @@ Main Components
   text-align: center;
   font-size: 2.4rem;
 }
+
+.cd-section h3 {
+  line-height: 80vh;
+  text-align: center;
+  font-size: 2.0rem;
+}
+
 .cd-section:first-of-type > div {
   background-color: #2b334f;
 }
